# task_Solana_2026

./: .gitignore  Anchor.toml  Cargo.toml  README.md  package.json  tsconfig.json
programs/crafting/: Cargo.toml
programs/crafting/src/: lib.rs
programs/item_nft/: Cargo.toml
programs/item_nft/src/: lib.rs
programs/magic_token/: Cargo.toml
programs/magic_token/src/: lib.rs
programs/marketplace/: Cargo.toml
programs/marketplace/src/: lib.rs
programs/resource_manager/: Cargo.toml
programs/resource_manager/src/: lib.rs
programs/search/: Cargo.toml
programs/search/src/: lib.rs
scripts/: interact.ts
tests/: kozak_business.ts
