[package]
name = "item-nft"
version = "0.1.0"
description = "Керування створенням NFT-предметів (Token-2022 з MetadataPointer)"
edition = "2021"
rust-version = "1.79"

[lib]
crate-type = ["cdylib", "lib"]
name = "item_nft"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = "0.31.0"
anchor-spl = "0.31.0"
solana-program = "=2.1.0"
spl-token-2022 = { version = "6", features = ["no-entrypoint"] }
spl-token-metadata-interface = "0.5"
spl-type-length-value = "0.6"
